--- a/forwind_net/Gemfile
+++ b/forwind_net/Gemfile
@@ -5,7 +5,7 @@ gem 'rails', '3.2.11'
 # Bundle edge Rails instead:
 # gem 'rails', :git => 'git://github.com/rails/rails.git'
 
-gem 'sqlite3'
+gem 'pg'
 
 
 # Gems used only for assets and not required
@@ -25,6 +25,8 @@ gem 'jquery-rails'
 gem 'authlogic'
 gem 'will_paginate'
 gem 'bluecloth'
+gem 'gibbon'
+gem 'blogkit', '0.0.0', :git => 'git://github.com/ryanstout/blog_kit.git', :branch => 'rails3'
 
 # To use ActiveModel has_secure_password
 # gem 'bcrypt-ruby', '~> 3.0.0'
