--- a/config/database.yml
+++ b/config/database.yml
@@ -1,20 +1,20 @@
-common: &common
-  adapter:  postgresql
-  host: localhost
-  pool:     5
-  timeout:  5000
-  min_messages: warning
-
-development: &development
-  <<: *common
+#development:
+#  adapter: sqlite3
+#  database: db/development.sqlite3
+#  pool: 5
+#  timeout: 5000
+development:
+  adapter: postgresql
   database: forwind_development
+  pool: 5
+  encoding: unicode
+  username: ronoc
+  password: 
 
-test: &test
-  <<: *common
-  database: forwind_test
-
-
-production: &production
-  <<: *common
-  database: fowrind_development
-
+production:
+  adapter: postgresql
+  database: forwind_production
+  pool: 5
+  encoding: unicode
+  username: ronoc
+  password: 
