bring it social part 1

--- a/config/blog_kit.yml
+++ b/config/blog_kit.yml
@@ -2,7 +2,7 @@
 ---
 # ================ Visual settings ================
 
-blog_name: 'Forwind Updates'
+blog_name: 'For/wind News'
 
 # Show "Published By ..."
 show_user_who_published: true
