--- a/config/blog_kit.yml
+++ b/config/blog_kit.yml
@@ -7,7 +7,7 @@ blog_name: 'For/wind News'
 # Show "Published By ..."
 show_user_who_published: true
 
-post_date_format: '%B %e %Y' # strftime format
+post_date_format: "%B %e, '%y" # strftime format
 
 # Enable gravatar support next to comments and posts
 gravatar: false
